--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AWS Cloud Services</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;800&display=swap">
-    <!-- Import the webpage's stylesheet -->
+    <!-- hoja de estilos -->
     <link rel="stylesheet" href="/style.css" />
-    <!-- Import the webpage's javascript file -->
+    <!-- script del archivo index -->
     <script src="/script.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -23,28 +24,81 @@
         </ul>
     </header>
 
-    <main class="main-content">
-        <h1>Servicios Principales de AWS</h1>
+<main class="main-content container">
+        <h1 class="mb-4">Servicios Principales de AWS</h1>
         
-        <div class="service-card">
-            <h2>Amazon EC2</h2>
-            <p>Servicio de computación en la nube seguro y redimensionable. Ejecute aplicaciones en instancias virtuales.</p>
-        </div>
+        <div class="accordion accordion-flush" id="servicesAccordion">
+            <!-- Amazon EC2 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" 
+                            data-bs-toggle="collapse" data-bs-target="#ec2" 
+                            aria-expanded="false" aria-controls="ec2">
+                        Amazon EC2
+                    </button>
+                </h2>
+                <div id="ec2" class="accordion-collapse collapse" 
+                     data-bs-parent="#servicesAccordion">
+                    <div class="accordion-body">
+                        <p>Servicio de computación en la nube seguro y redimensionable. Ejecute aplicaciones en instancias virtuales.</p>
+                        <ul class="list-unstyled">
+                            <li>🖥 Tipos de instancias optimizadas</li>
+                            <li>🔒 Seguridad integrada</li>
+                            <li>📈 Escalado automático</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-        <div class="service-card">
-            <h2>Amazon S3</h2>
-            <p>Almacenamiento de objetos escalable para backup, archivado y análisis de datos.</p>
-        </div>
+            <!-- Amazon S3 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" 
+                            data-bs-toggle="collapse" data-bs-target="#s3" 
+                            aria-expanded="false" aria-controls="s3">
+                        Amazon S3
+                    </button>
+                </h2>
+                <div id="s3" class="accordion-collapse collapse" 
+                     data-bs-parent="#servicesAccordion">
+                    <div class="accordion-body">
+                        <p>Almacenamiento de objetos escalable para backup, archivado y análisis de datos.</p>
+                        <ul>
+                            <li>💾 99.999999999% de durabilidad</li>
+                            <li>🔐 Encriptación automática</li>
+                            <li>🌍 Disponibilidad global</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-        <div class="service-card">
-            <h2>AWS Lambda</h2>
-            <p>Ejecute código sin aprovisionar servidores, pagando solo por el tiempo de consumo.</p>
+            <!-- AWS Lambda -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" 
+                            data-bs-toggle="collapse" data-bs-target="#lambda" 
+                            aria-expanded="false" aria-controls="lambda">
+                        AWS Lambda
+                    </button>
+                </h2>
+                <div id="lambda" class="accordion-collapse collapse" 
+                     data-bs-parent="#servicesAccordion">
+                    <div class="accordion-body">
+                        <p>Ejecute código sin aprovisionar servidores, pagando solo por el tiempo de consumo.</p>
+                        <ul>
+                            <li>⚡ Ejecución bajo demanda</li>
+                            <li>📊 Integración con otros servicios AWS</li>
+                            <li>🔄 Escalado automático</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
+    </main>
 
-        <div class="service-card">
-            <h2>Amazon RDS</h2>
-            <p>Servicio de base de datos relacional administrada con soporte para múltiples motores.</p>
-        </div>
-    </main>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+            crossorigin="anonymous"></script>
+  
 </body>
 </html>
